--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -19,6 +19,10 @@
   background-image: url(/assets/eurn.png);
 }
 
+.bg-page-hero {
+  background-image: url(/assets/001.jpeg);
+}
+
 /*********************************/
 /*         Menu                  */
 /*===============================*/
